# MPI_Unemployed_morons

./: Agent.cpp  CMakeLists.txt  Company.h  Configuration.cpp  Configuration.h  Message.h  config.json  configuration.json  json.hpp  main.cpp
src/: config.json  main.cpp
src/MPIUtils/: Messanger.cpp  Messanger.h
src/cerealUtils/: Serializer.cpp  Serializer.h
src/domain/: Agent.cpp  Agent.h  AgentOnQueue.cpp  AgentOnQueue.h  Companies.cpp  Companies.h  Company.cpp  Company.h  Configuration.cpp  Configuration.h  Message.cpp  Message.h  MessageReply.cpp  MessageReply.h  MessageRequest.cpp  MessageRequest.h  MessagesTypes.h  config.json
src/include/: Json.h
src/jsonConverters/: CompaniesJsonConverter.cpp  CompaniesJsonConverter.h  CompanyJsonConverter.cpp  CompanyJsonConverter.h  ConfigurationJsonConverter.cpp  ConfigurationJsonConverter.h
src/libs/: json.hpp
src/utils/: JsonLoader.cpp  JsonLoader.h
